add_subdirectory(Adler-32)
add_subdirectory(AES)
add_subdirectory(B.B.S.)
add_subdirectory(BLAKE)
add_subdirectory(BSD)
add_subdirectory(CityHash)
add_subdirectory(CRC)
add_subdirectory(Damm)
add_subdirectory(ECOH)
add_subdirectory(Fletcher)
add_subdirectory(FNV)
add_subdirectory(FSB)
add_subdirectory(GOST)
add_subdirectory(Grostl)
add_subdirectory(HAS-160)
add_subdirectory(HAVAL)
add_subdirectory(ISAAC)
add_subdirectory(Jenkins)
add_subdirectory(JH)
add_subdirectory(Luhn)
add_subdirectory(MD2)
add_subdirectory(MD4)
add_subdirectory(MD5)
add_subdirectory(MD6)
add_subdirectory(MT19937)
add_subdirectory(MurmurHash)
add_subdirectory(Pearson)
add_subdirectory(RadioGatun)
add_subdirectory(RC4)
add_subdirectory(RIPEMD)
add_subdirectory(RSA)
add_subdirectory(SHA-1)
add_subdirectory(SHA-2)
add_subdirectory(SHA-3)
add_subdirectory(SipHash)
add_subdirectory(Skein)
add_subdirectory(Snefru)
add_subdirectory(Spectral)
add_subdirectory(SWIFFT)
add_subdirectory(SYSV)
add_subdirectory(Tiger)
add_subdirectory(Verhoeff)
add_subdirectory(Whirlpool)
add_subdirectory(Wichmann-Hill)
add_subdirectory(Xorshift)
add_subdirectory(xxHash)
add_subdirectory(Zobrist)
